--- a/README
+++ b/README
@@ -5,3 +5,6 @@ https://en.wikipedia.org/wiki/Ritual
 
 # mutilation
 https://en.wikipedia.org/wiki/Mutilation
+
+# isoleercel
+https://nl.wikipedia.org/wiki/Isoleercel
