--- a/README
+++ b/README
@@ -17,3 +17,5 @@ https://nl.wikipedia.org/wiki/Isoleercel
 
 # staat der nederlanden
 https://nl.wikipedia.org/wiki/Staat_der_Nederlanden
+
+nederland ® 1990-2022
