--- a/README
+++ b/README
@@ -9,6 +9,9 @@ https://nl.wikipedia.org/wiki/Bemoeizorg
 # ritual
 https://en.wikipedia.org/wiki/Ritual
 
+# ventral tegmental area
+https://en.wikipedia.org/wiki/Ventral_tegmental_area
+
 # mutilation
 https://en.wikipedia.org/wiki/Mutilation
 
