--- a/README
+++ b/README
@@ -9,6 +9,12 @@ https://nl.wikipedia.org/wiki/Bemoeizorg
 # ritual
 https://en.wikipedia.org/wiki/Ritual
 
+# psychiatrist
+https://en.wikipedia.org/wiki/Psychiatrist
+
+# geweld
+https://nl.wikipedia.org/wiki/Geweld
+
 # ventral tegmental area
 https://en.wikipedia.org/wiki/Ventral_tegmental_area
 
