--- a/README
+++ b/README
@@ -15,6 +15,9 @@ https://en.wikipedia.org/wiki/Psychiatrist
 # geweld
 https://nl.wikipedia.org/wiki/Geweld
 
+# substantia nigra
+https://en.wikipedia.org/wiki/Substantia_nigra
+
 # ventral tegmental area
 https://en.wikipedia.org/wiki/Ventral_tegmental_area
 
