--- a/README
+++ b/README
@@ -18,6 +18,9 @@ https://nl.wikipedia.org/wiki/Geweld
 # substantia nigra
 https://en.wikipedia.org/wiki/Substantia_nigra
 
+# midbrain
+https://en.wikipedia.org/wiki/Midbrain
+
 # ventral tegmental area
 https://en.wikipedia.org/wiki/Ventral_tegmental_area
 
