--- a/README
+++ b/README
@@ -15,6 +15,9 @@ https://en.wikipedia.org/wiki/Psychiatrist
 # geweld
 https://nl.wikipedia.org/wiki/Geweld
 
+# stabbing
+https://en.wikipedia.org/wiki/Stabbing
+
 # substantia nigra
 https://en.wikipedia.org/wiki/Substantia_nigra
 
