--- a/README
+++ b/README
@@ -18,6 +18,12 @@ https://nl.wikipedia.org/wiki/Geweld
 # stabbing
 https://en.wikipedia.org/wiki/Stabbing
 
+# syringe
+https://en.wikipedia.org/wiki/Syringe
+
+# poisening
+https://en.wikipedia.org/wiki/Poisoning
+
 # substantia nigra
 https://en.wikipedia.org/wiki/Substantia_nigra
 
